# config-auditor

./: .gitignore  README.kr.md  README.md  genie-parser.py  main.py  pyproject.toml  r1.cfg  requirements.txt  test_parse.py
scratch/: find_parser.py  test_genie.py  test_interface_parser.py
webapp/: README.md  init_packages.sh  main.py
webapp/core/: comparator.py  interface_parser.py  llm.py  parser.py
webapp/db/: database.py
webapp/static/: index.html
webapp/static/css/: style.css
webapp/static/js/: app.js  bulk.js  compare.js  golden.js  report.js  settings.js
